Inserciones de entidades narrativas terminadas. (falta la modificación de entidades)
